[project]
name = "cvp_mcp"
version = "0.1.0"
description = "CloudVision MCP Server"
dependencies = [
    "cloudvision",
    "grpcio",
    "protobuf",
    "mcp[cli]"
]

[tool.uv.workspace]
members = [
    "cvp-mcp",
]


[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cvp_mcp"]


